fix: input color contrast problem

--- a/src/components/core/input-field/_input-field.scss
+++ b/src/components/core/input-field/_input-field.scss
@@ -21,14 +21,8 @@
   border-color: var(--red-8);
 }
 
-.input-field--container[data-error='true']
-  > .input-field::placeholder {
-  color: var(--red-7);
-  font-weight: 300;
-}
-
 .input-field {
-  color: var(--slate-8);
+  color: var(--slate-12);
   background: var(--slate-3);
   padding: 0.5em;
   width: 100%;
